# imgstrip

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: batch.rs  cli.rs  convert.rs  error.rs  formats.rs  heic.rs  info.rs  main.rs  metadata.rs  rename.rs
tests/fixtures/: sample.heic
