[package]
name = "imgstrip"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
image = { version = "0.25", default-features = false, features = [
    "jpeg", "png", "webp", "bmp", "tiff", "gif"
] }
img-parts = "0.3"
libheif-rs = { version = "2", features = ["embedded-libheif"] }
little_exif = "0.6"
thiserror = "2"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
